# arm-bench

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  run_test.sh  sync_remote.sh
Arm Stuff/: codegen.yaml  generated.cpp
Arm Stuff/Archive (1)/: CROSS_PLATFORM_SUMMARY.md  PROFILER_MIGRATION.md  PROFILER_README.md  cross_platform_example.cpp  micro_profiler_mach.hpp  micro_profiler_perf.hpp
candidates_src/ncnn/: convolution.cpp  convolution1d.cpp  convolutiondepwise.cpp  deconvolution.cpp  deconvolutiondepwise.cpp
candidates_src/ncnn/common/: fused_activation.h
common/: .clang-format  common.mk  helpers.c  helpers.h  loops.h  loops.inc  main.c  sort.c  sort.h
dataset/: problems.json
dataset/problems/loop_001_fp32_inner_product/: problem.py
dataset/problems/loop_002_uint32_inner_product/: problem.py
dataset/problems/loop_003_fp64_inner_product/: problem.py
dataset/problems/loop_004_uint64_inner_product/: problem.py
dataset/problems/loop_005_strlen_short_strings/: problem.py
dataset/problems/loop_006_strlen_long_strings/: problem.py
dataset/problems/loop_008_precise_fp64_add_reduction/: problem.py
dataset/problems/loop_009_pointer_chasing/: problem.py
dataset/problems/loop_010_conditional_reduction_fp/: problem.py
dataset/problems/loop_012_particle_motion/: problem.py
dataset/problems/loop_019_mark_objects/: problem.py
dataset/problems/loop_022_tcp_checksum/: problem.py
dataset/problems/loop_023_conjugate_gradient/: problem.py
dataset/problems/loop_024_sum_of_abs_diffs/: problem.py
dataset/problems/loop_025_fp32_small_matrix_matrix_multiply/: problem.py
dataset/problems/loop_026_convert_utf_16_to_chars/: problem.py
dataset/problems/loop_027_fp32_square_root/: problem.py
dataset/problems/loop_028_fp64_fast_division/: problem.py
dataset/problems/loop_029_fp64_multiply_by_power_of_2/: problem.py
dataset/problems/loop_031_small_lengths_inline_memcpy_test/: problem.py
dataset/problems/loop_032_fp64_banded_linear_equations/: problem.py
dataset/problems/loop_033_fp64_inner_product/: problem.py
dataset/problems/loop_034_short_string_compares/: problem.py
dataset/problems/loop_035_array_addition/: problem.py
dataset/problems/loop_036_sparse_matrix_gauss_step/: problem.py
dataset/problems/loop_037_fp32_complex_vector_product/: problem.py
dataset/problems/loop_038_fp16_convolution/: problem.py
dataset/problems/loop_040_clamp_operation/: problem.py
dataset/problems/loop_101_upscale_filter/: problem.py
dataset/problems/loop_102_general_histogram/: problem.py
dataset/problems/loop_103_whitespace/: problem.py
dataset/problems/loop_104_byte_historgram/: problem.py
dataset/problems/loop_105_cascade_summation/: problem.py
dataset/problems/loop_106_sheep_and_goats/: problem.py
dataset/problems/loop_107_uint128_multiply/: problem.py
dataset/problems/loop_108_pixel_manipulation/: problem.py
dataset/problems/loop_109_uint32_complex_addition/: problem.py
dataset/problems/loop_110_uint32_complex_dot/: problem.py
dataset/problems/loop_111_fp64_overflow_handling/: problem.py
dataset/problems/loop_112_uint32_complex_mac/: problem.py
dataset/problems/loop_113_uint32_pairs_addition/: problem.py
dataset/problems/loop_114_auto_correlation/: problem.py
dataset/problems/loop_120_insertion_sort/: problem.py
dataset/problems/loop_121_quicksort/: problem.py
dataset/problems/loop_122_odd_even_transposition_sort/: problem.py
dataset/problems/loop_123_bitonic_mergesort/: problem.py
dataset/problems/loop_124_radix_sort/: problem.py
dataset/problems/loop_126_conditional_update/: problem.py
dataset/problems/loop_127_loop_early_exit/: problem.py
dataset/problems/loop_128_alias_in_contiguous_access/: problem.py
dataset/problems/loop_130_fp32_matrix_matrix_multiply_using/: problem.py
dataset/problems/loop_135_int8_int32_matrix_matrix_multiply_using_/: problem.py
dataset/problems/loop_136_int4_int32_matrix_matrix_multiply_using_/: problem.py
dataset/problems/loop_137_bf16_fp32_matrix_matrix_multiply_using_m/: problem.py
dataset/problems/loop_201_fp64_matrix_matrix_multiply_using_mopa_d/: problem.py
dataset/problems/loop_202_fp32_matrix_matrix_multiply_using_mopa_d/: problem.py
dataset/problems/loop_204_fp16_matrix_matrix_multiply_using_mopa_d/: problem.py
dataset/problems/loop_205_int8_int32_matrix_matrix_multiply_using_/: problem.py
dataset/problems/loop_206_int16_int64_matrix_matrix_multiply_using/: problem.py
dataset/problems/loop_207_int1_int32_matrix_matrix_multiply_using_/: problem.py
dataset/problems/loop_208_bf16_bf16_matrix_matrix_multiply_using_m/: problem.py
dataset/problems/loop_210_bf16_fp32_matrix_matrix_multiply_using_m/: problem.py
dataset/problems/loop_211_int16_int32_matrix_matrix_multiply_using/: problem.py
dataset/problems/loop_222_fp16_convolution/: problem.py
eval/: agent.py  config.py  eval_config.json.example  eval_from_generations.py  evaluator.py  generate_samples.py  provision.py  requirements.txt  run_benchmark.py  test_all_sizes.py  test_sizes.py  test_workflow.py  tools.py
framework/ncnn/: layer_type_enum.h  ncnn_export.h  platform.h
loops/: bytehist_sve2.S  loop_001.c  loop_002.c  loop_003.c  loop_004.c  loop_005.c  loop_006.c  loop_008.c  loop_009.c  loop_010.c  loop_012.c  loop_019.c  loop_022.c  loop_023.c  loop_024.c  loop_025.c  loop_026.c  loop_027.c  loop_028.c  loop_029.c  loop_031.c  loop_032.c  loop_033.c  loop_034.c  loop_035.c  loop_036.c  loop_037.c  loop_038.c  loop_040.c  loop_101.c  loop_102.c  loop_103.c  loop_104.c  loop_105.c  loop_106.c  loop_107.c  loop_108.c  loop_109.c  loop_110.c  loop_111.c  (+43 more)
scripts/: collect_baselines.py  collect_baselines_ncnn.py  extract_dataset.py  fix_candidate_guards.py  perf_trends.py  probe_timing.py  update_descriptions.py
starter/ncnn/: ncnn_helpers.h  problems.json  ref_conv.h
terraform/: main.tf  setup.sh
tests/ncnn/: convolution.cpp  convolution1d.cpp  convolutiondepwise.cpp  deconvolution.cpp  deconvolutiondepwise.cpp  test_utils.h
tools/micro_profiler/: micro_profiler.hpp
(+42 files in other folders)
